= New Features =

== 1.16 release (in progress) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm

==== New classes ====
 * BlockIndependentDistribution

==== API changes ====

=== Python module ===

=== Miscellaneous ===
 * Require C99/C++11 support

=== Bug fixes ===
 * #1267 (Some CSV files cannot be imported)
 * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
 * #1447 (Highly inaccurate result in reliability model when using subset of RandomVector)
 * #1465 (The Sample constructor based on a list and an integer should not exist)
 * #1474 (optimization defaults)
 * #1507 (Leak in Collection typemaps)
 * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 * #1520 (The NLopt test is dubious)
 * #1521 (Basis of MonomialFunction)


== 1.15 release (2020-05-25) == #release-1.15

=== Library ===

==== Major changes ====
 * New EV solver for KarhunenLoeveP1Algorithm (Spectra), with sparse matrix and HMatrix support
 * Enable HMat AcaRandom compression method

==== New classes ====
 * Ipopt optimization solver

==== Documentation ====

==== API changes ====
 * Removed deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Removed deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Removed deprecated MethodOfMomentsFactory::set,getOptimizationProblem
 * ResourceMap::Set* methods no longer add new keys, the new Add* methods must be used instead
 * Removed OPTpp
 * Renamed HistogramFactory::computeSilvermanBandwidth into HistogramFactory::computeBandwidth.

=== Python module ===
 * ProcessSample __getitem__ returns Sample instead of Field
 * Implement list indexing

=== Miscellaneous ===
 * Add Sample::getMarginal(Description)
 * Fixed TBB performance when used together with OpenBLAS

=== Bug fixes ===
 * #1124 (DistributionFactory::buildAsXXX methods not documented)